[gd_scene load_steps=8 format=3 uid="uid://dmbmrs17y1c6d"]

[ext_resource type="Script" uid="uid://dn7hj8g8y51bc" path="res://main_menu.gd" id="1_i26rj"]
[ext_resource type="Texture2D" uid="uid://qh838764qpkv" path="res://images/background-black.png" id="2_eiy7p"]
[ext_resource type="StyleBox" uid="uid://dsyw3dbwxcjyj" path="res://new_style_box_flat.tres" id="3_h7a2f"]
[ext_resource type="StyleBox" uid="uid://xe1ave0qkec0" path="res://new_style_box_flat_focus.tres" id="3_qoqlk"]
[ext_resource type="StyleBox" uid="uid://cr6spfsk0ak8j" path="res://new_style_box_flat_hover.tres" id="4_qoqlk"]
[ext_resource type="StyleBox" uid="uid://s71uvhlv87wf" path="res://new_style_box_flat_pressed.tres" id="5_7r1g0"]
[ext_resource type="Texture2D" uid="uid://btqalifdyaso8" path="res://images/logopng.png" id="7_cqjrg"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_i26rj")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(360, 800)
offset_right = 362.0
offset_bottom = 803.0
scale = Vector2(0.996707, 0.997419)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_eiy7p")
expand_mode = 4
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="MenuContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 335.0
offset_right = 353.0
offset_bottom = 562.0
localize_numeral_system = false
theme_override_constants/separation = 37
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = ExtResource("3_qoqlk")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_qoqlk")
theme_override_styles/hover_pressed = ExtResource("4_qoqlk")
theme_override_styles/hover_mirrored = ExtResource("4_qoqlk")
theme_override_styles/hover = ExtResource("4_qoqlk")
theme_override_styles/pressed_mirrored = ExtResource("5_7r1g0")
theme_override_styles/pressed = ExtResource("5_7r1g0")
theme_override_styles/normal = ExtResource("3_h7a2f")
text = "Начать игру"
icon_alignment = 1

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_qoqlk")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_qoqlk")
theme_override_styles/hover_pressed = ExtResource("4_qoqlk")
theme_override_styles/hover_mirrored = ExtResource("4_qoqlk")
theme_override_styles/hover = ExtResource("4_qoqlk")
theme_override_styles/pressed_mirrored = ExtResource("5_7r1g0")
theme_override_styles/pressed = ExtResource("5_7r1g0")
theme_override_styles/normal = ExtResource("3_h7a2f")
text = "Настройки"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_qoqlk")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_qoqlk")
theme_override_styles/hover_pressed = ExtResource("4_qoqlk")
theme_override_styles/hover_mirrored = ExtResource("4_qoqlk")
theme_override_styles/hover = ExtResource("4_qoqlk")
theme_override_styles/pressed_mirrored = ExtResource("5_7r1g0")
theme_override_styles/pressed = ExtResource("5_7r1g0")
theme_override_styles/normal = ExtResource("3_h7a2f")
text = "Выход"

[node name="Logopng" type="Sprite2D" parent="."]
position = Vector2(181, 176)
scale = Vector2(0.656951, 0.656951)
texture = ExtResource("7_cqjrg")
metadata/_edit_lock_ = true

[connection signal="pressed" from="MenuContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
